@@ -12,6 +12,7 @@ v0.5 - Week 11
 Server:
 ! Fix GET /api/buoy_groups/id/buoy_instances and GET /api/buoys/id/buoy_instances HTTP error 500
 * Buoys and Buoy Groups are now archived instead of delete. This removes them from the interface but they remain in the database.
++ Add DELETE /api/sensor_types/id - just archives, doesn't do a hard delete
 
 
 v0.4 - Week 10 8/10
